--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <p>Parrafo agregado en GitHub</p>
 </head>
 <body>
     <h1>Proyecto Empresarial</h1>
